Первая реализация тз 15ого спринта.